trying my best for fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    @apply overflow-x-hidden;
+    overflow-x: hidden;
   }
